force-app/main/default/objects/QuoteLine__c/QuoteLine__c.object-meta.xml
<CustomObject>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QTLN-{000000}</displayFormat>
        <label>QUOTE LINE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>