force-app/main/default/objects/QuoteLine__c/fields/Amount_of_Selling_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Selling_Tax_Local_For__c</fullName>
    <formula>Total_Amount_of_Selling_Local_For__c * TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Selling Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>