force-app/main/default/objects/QuoteLine__c/fields/AmountofBuyingTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>AmountofBuyingTax3rdCurrency__c</fullName>
    <label>Amount of Buying Tax(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>