force-app/main/default/objects/QuoteLine__c/fields/AmountofBuyingTaxFCYFor__c.field-meta.xml
<CustomField>
    <fullName>AmountofBuyingTaxFCYFor__c</fullName>
    <formula>TotalAmountofBuyingFCYFor__c + ( TotalAmountofBuyingFCYFor__c * TaxRateBuying__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Buying Tax(FCY)-For</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>