force-app/main/default/objects/QuoteLine__c/fields/AmountOfBuyingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyingTaxLocal__c</fullName>
    <label>AMOUNT OF BUYING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>