force-app/main/default/objects/QuoteLine__c/fields/AmountofBuyingTaxLocalFor__c.field-meta.xml
<CustomField>
    <fullName>AmountofBuyingTaxLocalFor__c</fullName>
    <formula>Total_Amount_of_Buying_Local_For__c * TaxRateBuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Buying Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>