force-app/main/default/objects/QuoteLine__c/fields/AmountOfBuyingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyingTaxUSD__c</fullName>
    <label>AMOUNT OF BUYING TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>