force-app/main/default/objects/QuoteLine__c/fields/AmountofSellingTaxFCYFor__c.field-meta.xml
<CustomField>
    <fullName>AmountofSellingTaxFCYFor__c</fullName>
    <formula>TotalAmountofSellingFCYFor__c + ( TotalAmountofSellingFCYFor__c *  TaxRate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Selling Tax(FCY)-For</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>