force-app/main/default/objects/QuoteLine__c/fields/AmountOfSellingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellingTaxLocal__c</fullName>
    <label>AMOUNT OF SELLING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>