force-app/main/default/objects/QuoteLine__c/fields/AmountOfSellingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellingTaxUSD__c</fullName>
    <label>AMOUNT OF SELLING TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>