force-app/main/default/objects/QuoteLine__c/fields/AttentionPriorityNumberRollup__c.field-meta.xml
<CustomField>
    <fullName>AttentionPriorityNumberRollup__c</fullName>
    <label>Attention Priority(Number)-For Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>