force-app/main/default/objects/QuoteLine__c/fields/BillDataUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>BillDataUpdateTime__c</fullName>
    <label>BILLING DATA UPDATE DATE/TIME</label>
    <type>DateTime</type>
</CustomField>