force-app/main/default/objects/QuoteLine__c/fields/BuyingAmountinclTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountinclTax3rdCurrency__c</fullName>
    <label>Buying Amount incl Tax(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>