force-app/main/default/objects/QuoteLine__c/fields/BuyingAmountinclTaxLocalFor__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountinclTaxLocalFor__c</fullName>
    <formula>Total_Amount_of_Buying_Local_For__c + AmountofBuyingTaxLocalFor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying Amount incl Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>