force-app/main/default/objects/QuoteLine__c/fields/BuyingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountInclTaxUSD__c</fullName>
    <label>BUYING AMOUNT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>