force-app/main/default/objects/QuoteLine__c/fields/BuyingListPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceLocal__c</fullName>
    <label>BUYING LIST PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>