force-app/main/default/objects/QuoteLine__c/fields/BuyingListPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceUSD__c</fullName>
    <label>BUYING LIST PRICE(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>