force-app/main/default/objects/QuoteLine__c/fields/CarrierAirlinerVendorName__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinerVendorName__c</fullName>
    <label>CARRIER/AIRLINER/VENDOR NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>