force-app/main/default/objects/QuoteLine__c/fields/ContainerQuantity__c.field-meta.xml
<CustomField>
    <fullName>ContainerQuantity__c</fullName>
    <label>CONTAINER QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>