force-app/main/default/objects/QuoteLine__c/fields/CurrencyBuying__c.field-meta.xml
<CustomField>
    <fullName>CurrencyBuying__c</fullName>
    <defaultValue>$Setup.Site_Custom_Settings__c.Local_Currency__c</defaultValue>
    <label>CURRENCY-BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>