force-app/main/default/objects/QuoteLine__c/fields/CurrencyConverseForSelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConverseForSelling__c</fullName>
    <label>CURRENCY CONVERSION FOR SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>