force-app/main/default/objects/QuoteLine__c/fields/ExchangeRateSelling__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateSelling__c</fullName>
    <label>EXCHANGE RATE-SELLING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>