force-app/main/default/objects/QuoteLine__c/fields/FxrateBuying3rdCurrencyFCY__c.field-meta.xml
<CustomField>
    <fullName>FxrateBuying3rdCurrencyFCY__c</fullName>
    <label>Fxrate-Buying(3rd Currency-FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>