force-app/main/default/objects/QuoteLine__c/fields/FXRateID__c.field-meta.xml
<CustomField>
    <fullName>FXRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FXRATE ID</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>