force-app/main/default/objects/QuoteLine__c/fields/FxrateSelling3rdCurrencyFCY__c.field-meta.xml
<CustomField>
    <fullName>FxrateSelling3rdCurrencyFCY__c</fullName>
    <label>Fxrate-Selling(3rd Currency-FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>