force-app/main/default/objects/QuoteLine__c/fields/Invoice_to__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QUOTE LINE (Invoice to)</relationshipLabel>
    <relationshipName>QUOTE_LINE</relationshipName>
    <type>Lookup</type>
</CustomField>