force-app/main/default/objects/QuoteLine__c/fields/ISS__c.field-meta.xml
<CustomField>
    <fullName>ISS__c</fullName>
    <label>ISS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>