force-app/main/default/objects/QuoteLine__c/fields/LineItemDescription__c.field-meta.xml
<CustomField>
    <fullName>LineItemDescription__c</fullName>
    <label>LINE ITEM DESCRIPTION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>