force-app/main/default/objects/QuoteLine__c/fields/LineItemName__c.field-meta.xml
<CustomField>
    <fullName>LineItemName__c</fullName>
    <label>LINE ITEM NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>