force-app/main/default/objects/QuoteLine__c/fields/lineitemnamelocal__c.field-meta.xml
<CustomField>
    <fullName>lineitemnamelocal__c</fullName>
    <label>Line Item Name (Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>