force-app/main/default/objects/QuoteLine__c/fields/ListPriceMinusMinPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>ListPriceMinusMinPriceLocal__c</fullName>
    <formula>SellingListPriceLocal__c - ServicePricingID__r.MinSellingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price minus Min Price(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>