force-app/main/default/objects/QuoteLine__c/fields/Over1000kg__c.field-meta.xml
<CustomField>
    <fullName>Over1000kg__c</fullName>
    <label>+1000k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>