force-app/main/default/objects/QuoteLine__c/fields/Over100kg__c.field-meta.xml
<CustomField>
    <fullName>Over100kg__c</fullName>
    <label>+100k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>