force-app/main/default/objects/QuoteLine__c/fields/Over45kg__c.field-meta.xml
<CustomField>
    <fullName>Over45kg__c</fullName>
    <label>+45kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>