force-app/main/default/objects/QuoteLine__c/fields/ParentQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>ParentQuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT QUOTE LINE</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>CHILD QUOTE LINE</relationshipLabel>
    <relationshipName>ParentQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>