force-app/main/default/objects/QuoteLine__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>