force-app/main/default/objects/QuoteLine__c/fields/PODAOA__c.field-meta.xml
<CustomField>
    <fullName>PODAOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>QUOTE LINE (P.O.D(A.O.A))</relationshipLabel>
    <relationshipName>PODAOA</relationshipName>
    <type>Lookup</type>
</CustomField>