force-app/main/default/objects/QuoteLine__c/fields/PODAOAName__c.field-meta.xml
<CustomField>
    <fullName>PODAOAName__c</fullName>
    <label>P.O.D(A.O.A) NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>