force-app/main/default/objects/QuoteLine__c/fields/POLAOD__c.field-meta.xml
<CustomField>
    <fullName>POLAOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>POLAOD</relationshipName>
    <type>Lookup</type>
</CustomField>