force-app/main/default/objects/QuoteLine__c/fields/POLAODName__c.field-meta.xml
<CustomField>
    <fullName>POLAODName__c</fullName>
    <label>P.O.L(A.O.D) NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>