force-app/main/default/objects/QuoteLine__c/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PRINT</label>
    <type>Checkbox</type>
</CustomField>