force-app/main/default/objects/QuoteLine__c/fields/PrintingSection__c.field-meta.xml
<CustomField>
    <fullName>PrintingSection__c</fullName>
    <label>PRINTING SECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PrintingSection</valueSetName>
    </valueSet>
</CustomField>