force-app/main/default/objects/QuoteLine__c/fields/ProductBillingType__c.field-meta.xml
<CustomField>
    <fullName>ProductBillingType__c</fullName>
    <formula>text(ProductID__r.BillingType__c)</formula>
    <label>Product Billing Type</label>
    <type>Text</type>
</CustomField>