force-app/main/default/objects/QuoteLine__c/fields/Profit_NIC_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>Profit_NIC_Tax_Local_For__c</fullName>
    <formula>Total_Amount_of_Selling_Local_For__c - Total_Amount_of_Buying_Local_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>