force-app/main/default/objects/QuoteLine__c/fields/Profit_Ratio_NIC_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>Profit_Ratio_NIC_Tax_Local_For__c</fullName>
    <formula>( TotalAmountSellingLocal__c - TotalAmountBuyingLocal__c )/TotalAmountSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio NIC Tax(Local)%-For</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>