force-app/main/default/objects/QuoteLine__c/fields/ProfitInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxLocal__c</fullName>
    <formula>SellingAmountInclTaxLocal__c - BuyingAmountInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT INCL TAX (LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>