force-app/main/default/objects/QuoteLine__c/fields/ProfitInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxUSD__c</fullName>
    <formula>SellingAmountInclTaxUSD__c - BuyingAmountInclTaxUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>