force-app/main/default/objects/QuoteLine__c/fields/ProfitINCTaxFCYFor__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCTaxFCYFor__c</fullName>
    <formula>SellingAmountinclTaxFCYFor__c -  BuyingAmountInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INC Tax(FCY)-For</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>