force-app/main/default/objects/QuoteLine__c/fields/ProfitINCTaxLocalFor__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCTaxLocalFor__c</fullName>
    <formula>Selling_Amount_incl_Tax_Local_For__c - BuyingAmountinclTaxLocalFor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INC Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>