force-app/main/default/objects/QuoteLine__c/fields/ProfitNICTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTax3rdCurrency__c</fullName>
    <formula>TotalAmountofSelling3rdCurrency__c - TotalAmountofBuying3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>