force-app/main/default/objects/QuoteLine__c/fields/ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxLocal__c</fullName>
    <formula>TotalAmountSellingLocal__c - TotalAmountBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>