force-app/main/default/objects/QuoteLine__c/fields/ProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxUSD__c</fullName>
    <formula>TotalAmountOfSellingUSD__c - TotalAmountOfBuyingUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>