force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioinclTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioinclTax3rdCurrency__c</fullName>
    <formula>(SellingAmountinclTax3rdCurrency__c - BuyingAmountinclTax3rdCurrency__c)/ SellingAmountinclTax3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio incl Tax(3rd Currency)%</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>