force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxLocal__c</fullName>
    <formula>(SellingAmountInclTaxLocal__c - BuyingAmountInclTaxLocal__c)/SellingAmountInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>