force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxUSD__c</fullName>
    <formula>(SellingAmountInclTaxUSD__c - BuyingAmountInclTaxUSD__c)/SellingAmountInclTaxUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>