force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioNICTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTax3rdCurrency__c</fullName>
    <formula>(TotalAmountofSelling3rdCurrency__c - TotalAmountofBuying3rdCurrency__c)/TotalAmountofSelling3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio NIC Tax(3rd Currency)%</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>