force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxLocal__c</fullName>
    <formula>( TotalAmountSellingLocal__c - TotalAmountBuyingLocal__c )/TotalAmountSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>