force-app/main/default/objects/QuoteLine__c/fields/ProfitRatioNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxUSD__c</fullName>
    <formula>(TotalAmountOfSellingUSD__c - TotalAmountOfBuyingUSD__c)/TotalAmountOfSellingUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>