force-app/main/default/objects/QuoteLine__c/fields/QUOTE_LINE_Summary__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_LINE_Summary__c</fullName>
    <formula>Name  +&apos; | &apos;+ ServicePricingID__r.Name +&apos; | &apos;+  TEXT(ServicePricingID__r.SellAmountUSD__c) +&apos; USD | &apos;+ 	TEXT(ServicePricingID__r.SellKingakuJPY__c)  +&apos; &apos;+  $Setup.Site_Custom_Settings__c.Local_Currency__c+ &apos; | &apos;+  TEXT(Quantity__c)  +&apos; | &apos;+  ChargeUnitInPrint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUOTE LINE Summary</label>
    <type>Text</type>
</CustomField>