force-app/main/default/objects/QuoteLine__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <label>QUOTE ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>