force-app/main/default/objects/QuoteLine__c/fields/QuoteLineNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineNumber__c</fullName>
    <label>QUOTE LINE NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>