force-app/main/default/objects/QuoteLine__c/fields/RollupProdBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupProdBuyingUnitPriceLocal__c</fullName>
    <label>ROLLUP PRODUCT BUYING UNIT PRICE(LOCAL)</label>
    <summarizedField>ProdSvcPricingQuoteLine__c.ProdBuyingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>ProdSvcPricingQuoteLine__c.QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>