force-app/main/default/objects/QuoteLine__c/fields/RollupProdSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupProdSellingUnitPriceLocal__c</fullName>
    <label>ROLLUP PRODUCT SELLING UNIT PRICE(LOCAL)</label>
    <summarizedField>ProdSvcPricingQuoteLine__c.ProdSellingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>ProdSvcPricingQuoteLine__c.QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>