force-app/main/default/objects/QuoteLine__c/fields/RollupProdSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupProdSellingUnitPriceUSD__c</fullName>
    <label>ROLLUP PRODUCT SELLING UNIT PRICE(USD)</label>
    <summarizedField>ProdSvcPricingQuoteLine__c.ProdSellingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>ProdSvcPricingQuoteLine__c.QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>