force-app/main/default/objects/QuoteLine__c/fields/RollupSvcBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSvcBuyingUnitPriceLocal__c</fullName>
    <label>ROLLUP 	 SVC BUYING UNIT PRICE(LOCAL)</label>
    <summarizedField>ProdSvcPricingQuoteLine__c.SvcBuyingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>ProdSvcPricingQuoteLine__c.QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>