force-app/main/default/objects/QuoteLine__c/fields/RollupSvcSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSvcSellingUnitPriceLocal__c</fullName>
    <label>ROLLUP SVC SELLING UNIT PRICE(LOCAL)</label>
    <summarizedField>ProdSvcPricingQuoteLine__c.SvcSellingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>ProdSvcPricingQuoteLine__c.QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>