force-app/main/default/objects/QuoteLine__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>RouteQuote__c</referenceTo>
    <relationshipLabel>Quote Line</relationshipLabel>
    <relationshipName>Route_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>