force-app/main/default/objects/QuoteLine__c/fields/SellingAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingAmountInclTaxLocal__c</fullName>
    <label>SELLING AMOUNT INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>