force-app/main/default/objects/QuoteLine__c/fields/SellingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>SellingAmountInclTaxUSD__c</fullName>
    <label>SELLING AMOUNT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>