force-app/main/default/objects/QuoteLine__c/fields/SellingListPrice3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>SellingListPrice3rdCurrency__c</fullName>
    <label>Selling List Price(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>