force-app/main/default/objects/QuoteLine__c/fields/SellingListPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingListPriceLocal__c</fullName>
    <label>SELLING LIST PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>