force-app/main/default/objects/QuoteLine__c/fields/SellingListPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>SellingListPriceUSD__c</fullName>
    <label>SELLING LIST PRICE(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>