force-app/main/default/objects/QuoteLine__c/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>SERVICE CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceCategory</valueSetName>
    </valueSet>
</CustomField>