force-app/main/default/objects/QuoteLine__c/fields/ServiceCostingType__c.field-meta.xml
<CustomField>
    <fullName>ServiceCostingType__c</fullName>
    <label>SERVICE COSTING TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceCostingType</valueSetName>
    </valueSet>
</CustomField>