force-app/main/default/objects/QuoteLine__c/fields/ServicePricingID__c.field-meta.xml
<CustomField>
    <fullName>ServicePricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE PRICING ID</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>