force-app/main/default/objects/QuoteLine__c/fields/ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>ServiceSchedule__c</fullName>
    <label>SERVICE SCHEDULE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>