force-app/main/default/objects/QuoteLine__c/fields/ServiceSubCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceSubCategory__c</fullName>
    <label>SERVICE SUB-CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceSubCategory</valueSetName>
    </valueSet>
</CustomField>