force-app/main/default/objects/QuoteLine__c/fields/TextServiceID__c.field-meta.xml
<CustomField>
    <fullName>TextServiceID__c</fullName>
    <inlineHelpText>Service Name for Search in List View</inlineHelpText>
    <label>Text Service ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>